fix not showing tooltip in social media icon bug

--- a/src/components/SocialMediaIcon/index.module.scss
+++ b/src/components/SocialMediaIcon/index.module.scss
@@ -3,3 +3,7 @@
 .icon {
   color: $color-palette-foreground-light;
 }
+
+.wrapper {
+  display: inline-block;
+}
